<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">Background Image</string>
    <string name="app_logo">App logo</string>
    <string name="mens">MENS</string>
    <string name="mens_off">MENS OFF</string>
    <string name="mens_on">MENS ON</string>
    <string name="womens_off">WOMENS OFF</string>
    <string name="womens_on">WOMENS ON</string>
    <string name="womens">WOMENS</string>
    <string name="co_eds">CO-EDs</string>
    <string name="co_ed_off">CO-ED OFF</string>
    <string name="co_ed_on">CO-ED ON</string>
    <string name="next">NEXT</string>
    <string name="desired_league">Desired League</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="textview">TextView</string>
    <string name="beginner">BEGINNER</string>
    <string name="advanced">ADVANCED</string>
    <string name="finish">FINISH</string>
    <string name="empty"/>
</resources>
