<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop" android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="165dp"
            android:layout_height="67dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/swooshLogo"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:fontFamily="@font/montserrat"
            android:textSize="24sp" android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imageView2" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/swooshLogo"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:textOff="@string/mens_off"
                android:textOn="@string/mens_on" android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white"/>
        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:textOff="@string/womens_off" android:textOn="@string/womens_on"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"/>
        <ToggleButton
                android:text="@string/co_eds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:textOff="@string/co_ed_off"
                android:textOn="@string/co_ed_on" android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"
            android:textSize="20sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>