<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/backgroundImg2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"
            android:background="@drawable/beginnerballerbg"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"/>

    <ImageView
            android:layout_width="165dp"
            android:layout_height="67dp"
            app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/swooshLogo2"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_logo"
            app:layout_constraintStart_toEndOf="@+id/backgroundImg2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/backgroundImg2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/backgroundImg2"/>

    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/backgroundImg2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/backgroundImg2"
            android:textSize="18sp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/swooshLogo2"
            android:textColor="@android:color/white"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="392dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp">

        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton5"
                android:layout_weight="1"
                android:background="@drawable/swoosh_toggle"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:textOff="@string/beginner"
                android:textOn="@string/beginner"
                android:layout_marginEnd="16dp"/>

        <ToggleButton
                android:text="@string/advanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton4"
                android:layout_weight="1"
                android:background="@drawable/swoosh_toggle"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:textOff="@string/advanced"
                android:textOn="@string/advanced"
                android:layout_marginStart="16dp"/>
    </LinearLayout>

    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getStartedButton2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundImg2"
            android:fontFamily="@font/montserrat"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:background="@drawable/swoosh_button"
            app:layout_constraintHorizontal_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>